[package]
name = "icn-economics"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "ICN economics module, managing mana, resource policies, and potentially token accounting."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
icn-common = { path = "../icn-common" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] } # For Mutex, RwLock if needed async
thiserror = "1.0" # Added thiserror
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
# Example feature: enable-advanced-accounting = []
