[package]
name = "icn-economics"
version.workspace = true
edition = "2021"
authors = ["ICN Contributors"]
description = "ICN economics module, managing mana, resource policies, and potentially token accounting."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
icn-common = { path = "../icn-common" }
icn-reputation = { path = "../icn-reputation" }
icn-eventstore = { path = "../icn-eventstore" }
icn-dag = { path = "../icn-dag" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] } # For Mutex, RwLock if needed async
thiserror = "2.0" # Added thiserror
serde_json = "1.0"
log = "0.4"
once_cell = "1.21"
prometheus-client = "0.22"
sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }
rusqlite = { version = "0.29", optional = true, features = ["bundled"] }
rocksdb = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3.0"
sled = { version = "0.34" }
bincode = "1.3"
icn-runtime = { path = "../icn-runtime" }

[features]
default = ["persist-sled"]
persist-sled = ["dep:sled", "dep:bincode"]
persist-sqlite = ["dep:rusqlite"]
persist-rocksdb = ["dep:rocksdb", "dep:bincode"]
# Example feature: enable-advanced-accounting = []
allow-nondeterminism = []

[package.metadata.clippy]
disallowed-methods = [
    { path = "std::time::SystemTime::now", reason = "use deterministic time provider" },
    { path = "fastrand::f64", reason = "use deterministic RNG" },
    { path = "fastrand::u64", reason = "use deterministic RNG" },
    { path = "fastrand::u32", reason = "use deterministic RNG" },
    { path = "fastrand::usize", reason = "use deterministic RNG" },
    { path = "fastrand::fill", reason = "use deterministic RNG" }
]
