[package]
name = "icn-federation-sync"
version = "0.2.0"
edition = "2021"
description = "Federation Synchronization Protocol for InterCooperative Network"
authors = ["ICN Core Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/InterCooperative-Network/icn-core"

[dependencies]
icn-common = { path = "../icn-common", version = "0.2.0" }
icn-dag = { path = "../icn-dag", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.0"