[package]
name = "icn-governance"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "ICN governance module, handling proposals, voting, and decision execution."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
icn-common = { path = "../icn-common" }
icn-network = { path = "../icn-network", optional = true } # For federation sync
sled = { version = "0.34", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true}

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sled = { version = "0.34", optional = true } # Ensure sled is available for tests if feature is on

[features]
default = ["persist-sled"]
persist-sled = ["dep:sled", "dep:serde", "dep:bincode"]
federation = ["dep:icn-network"]
