[package]
name = "icn-governance"
version.workspace = true
edition = "2021"
authors = ["ICN Contributors"]
description = "ICN governance module, handling proposals, voting, and decision execution."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
icn-common = { path = "../icn-common" }
icn-eventstore = { path = "../icn-eventstore" }
icn-identity = { path = "../icn-identity" }
icn-network = { path = "../icn-network", optional = true } # For federation sync
icn-protocol = { path = "../icn-protocol", optional = true }
sled = { version = "0.34", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true}
once_cell = "1.21"
prometheus-client = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sled = { version = "0.34" }

[features]
default = ["persist-sled"]
persist-sled = ["dep:sled", "dep:serde", "dep:bincode", "serde"]
federation = ["dep:icn-network", "dep:icn-protocol"]
serde = ["dep:serde"]
allow-nondeterminism = []

[package.metadata.clippy]
disallowed-methods = [
    { path = "std::time::SystemTime::now", reason = "use deterministic time provider" },
    { path = "fastrand::f64", reason = "use deterministic RNG" },
    { path = "fastrand::u64", reason = "use deterministic RNG" },
    { path = "fastrand::u32", reason = "use deterministic RNG" },
    { path = "fastrand::usize", reason = "use deterministic RNG" },
    { path = "fastrand::fill", reason = "use deterministic RNG" }
]
