[package]
name = "icn-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
rand = "0.8"
bs58 = "0.5"
# TODO: Add actual crypto libraries like ed25519-dalek, x25519-dalek, k256 etc. later
