[package]
name = "icn-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
icn-common = { path = "../icn-common" }
icn-crdt = { path = "../icn-crdt" }
icn-dag = { path = "../icn-dag", features = ["async"] }
dashmap = "5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true, features = ["sync"] }

# --- crypto ---
ed25519-dalek = { version = "2.0.0-pre.3", features = ["rand_core"] }
rand_core      = { version = "0.6", features = ["getrandom"] } # used by dalek's OsRng
rand           = "0.8" # For OsRng compatibility with ark circuits
# --- DID:key helpers ---
multibase      = "0.9"          # base-58btc ("z...") encoder/decoder
# tiny crate that just exposes the unsigned-varint impl used by multicodec
unsigned-varint = { version = "0.8", default-features = false } 
serde_bytes = "0.11" # For SignatureBytes serialization
reqwest.workspace = true
bulletproofs = "5"
curve25519-dalek = "4"
merlin = "3"
icn-zk = { path = "../icn-zk" }
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
directories-next = "2"
serde_json = "1.0"
once_cell = "1.21"
lru = "0.16"
sha2 = "0.10"
icn-reputation = { path = "../icn-reputation" }
prometheus-client = "0.22"
fastrand = "2"
log = "0.4"

# Ensure old ones are removed if they conflict or are replaced
# ed25519-dalek = { version = "2.0", features = ["serde"] } # Old, replaced by specific version
# rand = "0.8" # Old, replaced by rand_core for dalek
# bs58 = "0.5" # Old, replaced by multibase for did:key
# multihash = { version = "0.19", features = ["multihash-codetable"] } # Old, direct varint used now

[dev-dependencies]
# rand is still useful for general tests if needed, but OsRng from rand_core is for dalek
rand = "0.8"
serde_json = "1.0"
curve25519-dalek = "4"
merlin = "3"
icn-zk = { path = "../icn-zk" }
ark-std = "0.4"
