cargo-features = ["edition2024"]

[package]
name = "icn-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-identity = { path = "../icn-identity" }
serde = { version = "1.0", features = ["derive"] }
