[package]
name = "icn-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-identity = { path = "../icn-identity" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icn-reputation = { path = "../icn-reputation" }
icn-economics = { path = "../icn-economics" }
once_cell = "1.21"
prometheus-client = "0.22"
log = "0.4"
bincode = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async"] }
