[package]
name = "icn-network"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Networking crate for ICN, managing P2P communication using libp2p."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
icn-common = { path = "../icn-common" }
icn-mesh = { path = "../icn-mesh" }
icn-identity = { path = "../icn-identity" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1.77"
downcast-rs = "1.2.0"
bincode = "1.3"
oneshot = "0.1"
once_cell = "1.21"
prometheus-client = "0.22"
lru = "0.16"
sha2 = "0.10"

# libp2p dependencies with consistent versions
libp2p = { version = "0.53.2", features = ["tokio", "gossipsub", "mdns", "kad", "macros", "ping", "yamux", "noise", "tcp", "dns", "request-response"], optional = true }

[dev-dependencies]
# No specific dev-dependencies here yet, but could add things like criterion for benchmarks
anyhow = "1.0"
env_logger = "0.10"
libp2p = { version = "0.53.2", features = ["tokio", "tcp", "dns", "kad", "gossipsub", "noise", "yamux", "macros", "request-response"] }
rand = "0.8"
icn-common = { path = "../icn-common" }
icn-mesh = { path = "../icn-mesh" }
icn-runtime = { path = "../icn-runtime" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
icn-governance = { path = "../icn-governance", features = ["federation"] }

[features]
default = []
libp2p = ["dep:libp2p"]
