[package]
name = "icn-network"
version.workspace = true
edition = "2021"
authors = ["ICN Contributors"]
description = "Network services and communication protocols for ICN."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
icn-common = { path = "../icn-common" }
icn-core-traits = { path = "../icn-core-traits" }
icn-protocol = { path = "../icn-protocol" }
icn-identity = { path = "../icn-identity" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
thiserror = "2.0"
async-trait = "0.1"
downcast-rs = "2.0"
bincode = "1.3"
oneshot = "0.1"
once_cell = "1.21"
prometheus-client = "0.22"
lru = "0.16"
sha2 = "0.10"

# libp2p dependencies with consistent versions
libp2p = { version = "0.56", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "mdns", "kad", "ping", "request-response", "macros"], optional = true }
libp2p-dns = { version = "0.44", features = ["tokio"], optional = true }
libp2p-mdns = { version = "0.48", features = ["tokio"], optional = true }
libp2p-tcp = { version = "0.44", features = ["tokio"], optional = true }

[dev-dependencies]
# No specific dev-dependencies here yet, but could add things like criterion for benchmarks
anyhow = "1.0"
env_logger = "0.11"
libp2p = { version = "0.56", features = ["tokio", "tcp", "dns", "kad", "gossipsub", "noise", "yamux", "macros", "request-response"] }
rand = "0.9"
icn-common = { path = "../icn-common" }
icn-mesh = { path = "../icn-mesh" }
icn-runtime = { path = "../icn-runtime" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
icn-governance = { path = "../icn-governance", features = ["federation"] }

[features]
default = []
libp2p = ["dep:libp2p", "dep:libp2p-dns", "dep:libp2p-mdns", "dep:libp2p-tcp"]

[lib]
doctest = false
