[package]
name = "icn-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-api = { path = "../icn-api", default-features = false, features = ["types-only"] }
icn-network = { path = "../icn-network", default-features = false }
icn-dag = { path = "../icn-dag" }
icn-governance = { path = "../icn-governance", features = ["serde"] }
icn-runtime = { path = "../icn-runtime", features = ["cli"] }
icn-identity = { path = "../icn-identity" }
icn-mesh = { path = "../icn-mesh" }
icn-reputation = { path = "../icn-reputation" }
icn-ccl = { path = "../../icn-ccl" }
icn-protocol = { path = "../icn-protocol" }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["full"] }
hex = "0.4"
bs58 = "0.5"
libp2p = { version = "0.53.2", optional = true }
async-trait = "0.1"
prometheus-client = "0.22"
subtle = "2"

[features]
default = ["icn-network/default"]
with-libp2p = ["icn-network/libp2p", "icn-runtime/enable-libp2p", "enable-libp2p", "dep:libp2p"]
enable-libp2p = []
persist-sqlite = ["icn-dag/persist-sqlite"]
persist-sled = ["icn-dag/persist-sled"]
persist-rocksdb = ["icn-dag/persist-rocksdb"]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
icn-ccl = { path = "../../icn-ccl" }
rcgen = "0.9"
prometheus-parse = "0.2"

[[bin]]
name = "icn-node"
path = "src/main.rs"
