[package]
name = "icn-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-api = { path = "../icn-api", default-features = false, features = ["types-only"] }
icn-network = { path = "../icn-network", default-features = false, features = ["libp2p"] }
icn-dag = { path = "../icn-dag", features = ["async"] }
icn-governance = { path = "../icn-governance", features = ["serde"] }
icn-runtime = { path = "../icn-runtime", features = ["cli", "async"] }
icn-identity = { path = "../icn-identity" }
icn-mesh = { path = "../icn-mesh" }
icn-reputation = { path = "../icn-reputation" }
icn-economics = { path = "../icn-economics" }
icn-eventstore = { path = "../icn-eventstore" }
icn-ccl = { path = "../../icn-ccl" }
icn-protocol = { path = "../icn-protocol" }
base64 = "0.21"
bincode = "1"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-log = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["json", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hex = "0.4"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
libp2p = { version = "0.56", optional = true }
async-trait = "0.1"
prometheus-client = "0.22"
subtle = "2"
dashmap = "5"
futures-util = "0.3"

[features]
default = ["icn-network/default"]
with-libp2p = ["icn-network/libp2p", "icn-runtime/enable-libp2p", "enable-libp2p", "dep:libp2p"]
enable-libp2p = []
persist-sqlite = ["icn-dag/persist-sqlite", "icn-runtime/persist-sqlite", "icn-economics/persist-sqlite"]
persist-sled = ["icn-dag/persist-sled", "icn-runtime/persist-sled", "icn-economics/persist-sled"]
persist-rocksdb = ["icn-dag/persist-rocksdb", "icn-runtime/persist-rocksdb", "icn-economics/persist-rocksdb"]
persist-postgres = ["icn-dag/persist-postgres", "icn-runtime/persist-postgres"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
icn-ccl = { path = "../../icn-ccl" }
rcgen = "0.14"
prometheus-parse = "0.2"

[[bin]]
name = "icn-node"
path = "src/main.rs"
