[package]
name = "icn-reputation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-identity = { path = "../icn-identity" }
serde = { version = "1.0", features = ["derive"] }
sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }
rusqlite = { version = "0.29", optional = true, features = ["bundled"] }
rocksdb = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["persist-sled"]
persist-sled = ["dep:sled", "dep:bincode"]
persist-sqlite = ["dep:rusqlite"]
persist-rocksdb = ["dep:rocksdb", "dep:bincode"]
