[package]
name = "icn-reputation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-core-traits = { path = "../icn-core-traits" }
icn-crdt = { path = "../icn-crdt" }
# icn-network = { path = "../icn-network" }  # Temporarily disabled due to circular dependency
serde = { version = "1.0", features = ["derive"] }
sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }
async-trait = "0.1"
tokio = { workspace = true, optional = true }
sqlx = { version = "0.7", optional = true, features = ["runtime-tokio-rustls", "sqlite"] }
rocksdb = { version = "0.21", optional = true }
prometheus-client = "0.22"
once_cell = "1.21"
log = "0.4"
# Dependencies for trust graph functionality
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
icn-identity = { path = "../icn-identity" }

[features]
default = ["persist-sled", "async"]
persist-sled = ["dep:sled", "dep:bincode"]
persist-sqlite = ["dep:sqlx", "async"]
persist-rocksdb = ["dep:rocksdb", "dep:bincode"]
async = ["dep:tokio"]
