[package]
name = "icn-runtime"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Core runtime logic for ICN nodes, including Host ABI and job management."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
icn-common = { path = "../icn-common" }
icn-identity = { path = "../icn-identity" }
icn-economics = { path = "../icn-economics" }
icn-mesh = { path = "../icn-mesh" }
icn-network = { path = "../icn-network", features = ["libp2p"] }
icn-protocol = { path = "../icn-protocol" }
icn-dag = { path = "../icn-dag" }
icn-governance = { path = "../icn-governance", default-features = false, features = ["serde"] }
icn-reputation = { path = "../icn-reputation" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1.77"
log = "0.4"
thiserror = "1.0"
libp2p = { version = "0.53.2", optional = true }
downcast-rs = "1.2.0"
futures = "0.3"
wasmtime = { version = "15", features = ["async"] }
wasmparser = "0.121"
bincode = "1.3"
once_cell = "1.21"
prometheus-client = "0.22"
clap = { version = "4.0", features = ["derive"], optional = true }
icn-ccl = { path = "../../icn-ccl" }
sha2 = "0.10"
anyhow = "1.0"
dashmap = "5"

[dev-dependencies]
anyhow = "1.0.75"
wat = "1.0"
# Needed for integration tests compiling CCL contracts
icn-ccl = { path = "../../icn-ccl" }
# For temporary ledger storage during tests
tempfile = "3"
# Ensure sequential execution for metrics tests
serial_test = { version = "3", features = ["async"] }
# Logging for integration tests
env_logger = "0.11"
# temp-dir = "0.1"

[features]
default = []
enable-libp2p = ["dep:libp2p"]
persist-sled = ["icn-governance/persist-sled", "icn-reputation/persist-sled"]
persist-sqlite = ["icn-governance/persist-sled", "icn-reputation/persist-sqlite", "icn-economics/persist-sqlite", "icn-dag/persist-sqlite"]
persist-rocksdb = ["icn-governance/persist-sled", "icn-reputation/persist-rocksdb", "icn-economics/persist-rocksdb", "icn-dag/persist-rocksdb"]
cli = ["dep:clap"]
async = ["icn-dag/async"]

# Integration tests for cross-node functionality
[[test]]
name = "cross_node_job_execution"
path = "tests/cross_node_job_execution.rs"
required-features = ["enable-libp2p"]

[[test]]
name = "cross_node_governance"
path = "tests/integration/cross_node_governance.rs"
required-features = ["enable-libp2p"]
