[package]
name = "icn-runtime"
version.workspace = true
edition = "2021"
authors = ["ICN Contributors"]
description = "Core runtime logic for ICN nodes, including Host ABI and job management."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
icn-common = { path = "../icn-common" }
icn-identity = { path = "../icn-identity" }
icn-economics = { path = "../icn-economics" }
icn-mesh = { path = "../icn-mesh" }
icn-network = { path = "../icn-network", features = ["libp2p"] }
icn-protocol = { path = "../icn-protocol" }
icn-dag = { path = "../icn-dag", features = ["async"] }
icn-api = { path = "../icn-api" }
icn-governance = { path = "../icn-governance", default-features = false, features = ["serde"] }
icn-reputation = { path = "../icn-reputation" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
libp2p = { version = "0.56", optional = true }
downcast-rs = "2.0.1"
futures = "0.3"
wasmtime = { version = "35", features = ["async"] }
wasmparser = "0.121"
bincode = "1.3"
once_cell = "1"
prometheus-client = "0.22"
clap = { version = "4.5", features = ["derive"], optional = true }
reqwest = { version = "0.12", features = ["json"] }
icn-ccl = { path = "../../icn-ccl" }
# For tests using circuit cost helpers
icn-zk = { path = "../icn-zk" }
sha2 = "0.10"
anyhow = "1"
procfs = "0.17"
dashmap = "6.1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
zeroize = "1.5"
hex = "0.4"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
fastrand = "2.0"
sysinfo = { version = "0.32", features = ["multithread"] }
blake2 = "0.10"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0.75"
wat = "1.0"
# Needed for integration tests compiling CCL contracts
icn-ccl = { path = "../../icn-ccl" }
# For temporary ledger storage during tests (now in main dependencies)
# Ensure sequential execution for metrics tests
serial_test = { version = "3", features = ["async"] }
# Logging for integration tests
env_logger = "0.11"
# temp-dir = "0.1"
criterion = { version = "0.5", features = ["async"] }
# For ZK proof tests
ark-serialize = "0.4"
ark-std = "0.4"

[features]
default = []
enable-libp2p = ["dep:libp2p"]
persist-sled = ["icn-governance/persist-sled", "icn-reputation/persist-sled"]
persist-sqlite = ["icn-governance/persist-sled", "icn-reputation/persist-sqlite", "icn-economics/persist-sqlite", "icn-dag/persist-sqlite"]
persist-rocksdb = ["icn-governance/persist-sled", "icn-reputation/persist-rocksdb", "icn-economics/persist-rocksdb", "icn-dag/persist-rocksdb"]
persist-postgres = ["icn-dag/persist-postgres"]
cli = ["dep:clap"]
async = ["icn-dag/async"]
production = []
allow-stubs = []
allow-nondeterminism = []

# Integration tests for cross-node functionality
[[test]]
name = "cross_node_job_execution"
path = "tests/cross_node_job_execution.rs"
required-features = ["enable-libp2p"]

[[test]]
name = "cross_node_governance"
path = "tests/integration/cross_node_governance.rs"
required-features = ["enable-libp2p"]

[[test]]
name = "ten_node_propagation"
path = "tests/integration/ten_node_propagation.rs"
required-features = ["enable-libp2p"]

# Load test client binary
[[bin]]
name = "load-test-client"
path = "src/bin/load-test-client.rs"
required-features = ["cli"]


[package.metadata.clippy]
disallowed-methods = [
    { path = "std::time::SystemTime::now", reason = "use deterministic time provider" },
    { path = "fastrand::f64", reason = "use deterministic RNG" },
    { path = "fastrand::u64", reason = "use deterministic RNG" },
    { path = "fastrand::u32", reason = "use deterministic RNG" },
    { path = "fastrand::usize", reason = "use deterministic RNG" },
    { path = "fastrand::fill", reason = "use deterministic RNG" }
]
