[package]
name = "icn-sdk"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
