[package]
name = "icn-zk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ark-std = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.5"
ark-snark = "0.4"
ark-serialize = "0.4"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rayon = "1"

[features]
default = []
devtools = []

[dev-dependencies]
ark-std = { version = "0.4", features = ["std"] }
criterion = { version = "0.5" }
