[package]
name = "job-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-identity = { path = "../icn-identity" }
icn-dag = { path = "../icn-dag", features = ["async"] }
icn-mesh = { path = "../icn-mesh" }
icn-runtime = { path = "../icn-runtime", features = ["async"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3.10"
